# xylarithData

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
crud/: data_crud.py
db/: database.py
models/: data_model.py
routers/: data_collection.py
services/data_sources/: base.py  country_enum.py  dubai.py  germany.py
